--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.1.1"
     }
 }
