--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /node_modules
 /public/storage
+/public/uploads
 /storage/*.key
 /vendor
 .env
@@ -10,5 +11,6 @@ Homestead.yaml
 auth.json
 npm-debug.log
 yarn-error.log
+
 /.idea
 /.vscode
